tests/reference/ast_new-with1-6c88c0f.stderr
syntax error: Token '...' is unexpected here
  --> tests/parser/with1.py:14:22
   |
14 | with open(...) as f: ...
   |                      ^^^ 
